<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_layout"
    tools:context="com.darkyelox.kactivitydelegatexample.MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_example_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:checked="true"
        android:id="@+id/some_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/some_action_button_off_label"
        android:textOn="@string/some_action_button_on_label"
        app:layout_constraintTop_toBottomOf="@id/text_view"/>

    <ToggleButton
        android:checked="true"
        android:id="@+id/other_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/other_action_button_off_label"
        android:textOn="@string/other_action_button_on_label"
        app:layout_constraintTop_toBottomOf="@id/some_action_button"/>
</android.support.constraint.ConstraintLayout>
